petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: petclinic
spec:
  type: ClusterIP
  selector:
    app: petclinic
  ports:
  - port: 8080
    targetPort: 8080
